--- a/src/pages/shenhai/index.mdx
+++ b/src/pages/shenhai/index.mdx
@@ -1,5 +1,6 @@
 ---
 layout: "../../layouts/shenhai/Standard.astro"
+title: 神海作大集
 displayTitle: 神海作大集
 seal: true
 footerLine1: 甲辰年
@@ -30,7 +31,7 @@ import ShJuan from "../../components/ShJuan.astro";
 
 本書者，說神海世界之奇事也。是魔神之園，洪荒之天，至今多有遺傳、怪說、閑事，同集一卷，神海閑談是也。
 
-### [※往閱是書](shxt)
+### [※往閱是書](shxt/)
 
 </ShJuan>
 
@@ -40,5 +41,5 @@ import ShJuan from "../../components/ShJuan.astro";
 
 右正書文，八章共卷。是散收集，止記不限。故不入閑談正本者，皆入廣記也。
 
-### [※往閱是書](shgj)
+### [※往閱是書](shgj/)
 </ShJuan>
