Fix wonky links

--- a/src/content/shiji-chapters/102.mdx
+++ b/src/content/shiji-chapters/102.mdx
@@ -1,6 +1,6 @@
 ---
-title: Chapter 102
-displayTitle: Chapter 102
+title: 史記卷一百二
+displayTitle: 史記卷一百二
 seal: false
 footerLine1: ""
 footerLine2: ""
