--- a/src/content/dagengren-chapters/26.md
+++ b/src/content/dagengren-chapters/26.md
@@ -1,5 +1,5 @@
 
-# 26 The Virtuous
+# 26. The Virtuous
 
 Li Mubai suddenly waved his hand, as the driver on the cart was picked up by a gust of wind, to land safely at the side of the road. 
 
