--- a/src/content/dagengren-chapters/392.md
+++ b/src/content/dagengren-chapters/392.md
@@ -1,5 +1,5 @@
 
-# 392X A Case from Years Past
+# A Case from Years Past
 
 *The National Teacher has truly graced us with her presence in person? And this time, it's her true body? Daoist Jinlian's influence is really that great…*
 
