--- a/src/content/dagengren-chapters/452.md
+++ b/src/content/dagengren-chapters/452.md
@@ -1,5 +1,5 @@
 
-# 452. Zhende 26
+# 452. Zhende Twenty-six
 
 After a six hour long march, they finally arrived at the encampment of the Chuzhou army before dusk.
 
