update (II) of thing to fix chapter

--- a/src/content/dagengren-chapters/483.md
+++ b/src/content/dagengren-chapters/483.md
@@ -2,7 +2,7 @@
 pubDate: 2025-06-15
 chapter: v2c253
 ---
-# 483X. Rebellion
+# 483. Rebellion
 
 Song Tingfeng and Zhu Guangxiao, up ahead, instantly froze, rooted to the spot.
 
