--- a/src/content/dagengren-chapters/484.md
+++ b/src/content/dagengren-chapters/484.md
@@ -211,7 +211,7 @@ The shells and arrows exploded in mid-air, as if blocked by an invisible barrier
 
 "It breaks my heart to see our ancestors’ six hundred years of legacy destroyed by a foolish emperor and traitorous ministers…"
 
-Xu Qi’an stood firm, then hurled the severed head like thunder: "So today, a coarse man's wrath, will spill blood fifty steps, and the world will dress in mourning!"
+Xu Qi’an stood firm, then hurled the severed head like thunder: "So today, a coarse man's wrath, will spill blood five steps, and the world will mourn!"
 
 On the wall, the cannons and crossbows exploded in turn.
 
